Touch to choose image

--- a/beforeAfter/beforeAfter/Base.lproj/Main.storyboard
+++ b/beforeAfter/beforeAfter/Base.lproj/Main.storyboard
@@ -20,17 +20,18 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BEFORE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AQ1-md-NgW">
                                 <rect key="frame" x="263" y="64" width="74" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AFTER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zy0-Wm-El2">
                                 <rect key="frame" x="270" y="314" width="60" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a9E-rr-vxA">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a9E-rr-vxA" customClass="UITouchImageView" customModule="beforeAfter" customModuleProvider="target">
                                 <rect key="frame" x="160" y="346" width="280" height="210"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="210" id="35F-uS-IpV"/>
                                     <constraint firstAttribute="width" constant="280" id="Smh-0Y-ndy"/>
@@ -40,8 +41,9 @@
                                 <rect key="frame" x="0.0" y="570" width="600" height="30"/>
                                 <state key="normal" title="Share"/>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0r9-kp-hj4">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0r9-kp-hj4" customClass="UITouchImageView" customModule="beforeAfter" customModuleProvider="target">
                                 <rect key="frame" x="160" y="96" width="280" height="210"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="210" id="ijP-5p-IGF"/>
                                     <constraint firstAttribute="width" constant="280" id="rwZ-hR-N6y"/>
@@ -64,6 +66,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Abu-0d-IDG"/>
+                    <connections>
+                        <outlet property="imageViewAfter" destination="a9E-rr-vxA" id="c39-yq-kW8"/>
+                        <outlet property="imageViewBefore" destination="0r9-kp-hj4" id="EEB-8g-Tas"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
